# rc-utils

./: .gitignore  CMakeLists.txt  main.c  readme.MD
ctest/: CMakeLists.txt  t_rc_list.c  t_rc_memory.c  t_utils.c  t_utils.h
src/collection/: list.c  rc_list.c
src/include/: list.h  memory_wrapper.h  rc_list.h  rc_memory.h
src/memory/: memory_wrapper.c  rc_memory.c
